@@ -1,5 +1,8 @@
 2004-01-20  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
+	* lily/axis-group-engraver.cc (finalize): extra check; if
+	process_music() is never called, then staffline_ == 0.
+
 	* lily/simultaneous-music-iterator.cc (pending_moment): don't
 	check run_always ().
 
